# EnsembleModel

./: .gitignore  Encoder Only Transformer AG News Classification.ipynb  README.md  ensemble_evaluation.py  ensemble_inference.py  ensemble_model.py  eval_runner.py  go.mod  inference.py  inference_encoder.py  pyproject.toml  requirements.txt  results.txt  sample_inputs.txt  spam_phishing_emails.txt  spam_results.txt
attention_visualization/: README.md  extract_attention.py  visualize_attention.py
dataprocessing/: main.go
results/: benign_business_emails.txt  business_results.txt
training/: README.md  main.py  models.py  pyproject.toml  train.py
training/data/: preparation.py
training/utils/: helpers.py
